# mppi_estimation

./: .gitignore  CMakeLists.txt  README.md  package.xml
bag/: 2025-02-25-16-33-33.bag  2025-02-25-17-04-14.bag  2025-02-25-17-42-12.bag  2025-02-26-14-17-48.bag  2025-02-26-15-07-01.bag  2025-02-26-15-19-36.bag
bag/20240612/: bag2txt.py  imu_data.txt  uwb_data.txt
bag/test/: 2025-02-26-15-22-25.bag  2025-02-26-15-27-11.bag  2025-02-26-15-45-06.bag  2025-02-26-15-52-59.bag
config/: anchors.txt  hw3_gt.txt  hw3_gt_rotation.txt  mppi_pose.txt  mppi_pose1.txt  mppi_pose2.txt  mppi_pose3.txt
config/20250527/: 0502_hw1_gt.txt  2tag_mppi_pose.txt  2tag_mppi_pose_use1.txt  uwb_node.txt
data/: best.xls  best2.xls  best3.xls  realBest.xls
include/: droneLocalization.h  mppiEstimation.h  mppiEstimation_2tag.h  mppiRocket.h  offlineMppiEstimation_2tag.h
launch/: ekf_localization.launch  mppi_estimation.launch  mppi_estimation_2tag.launch
scripts/: 2dPlot.py  bag2txt.py  extractBagFile.py  new_rpy.py  plot.py  plot_realtime.py  plot_realtime_2tag.py  rpyPlot.py  sampleTrajectoryPlot.py
src/: Rocket_main.cpp  droneLocalization.cpp  main.cpp  main_2tag.cpp  main_ekf.cpp  main_offline.cpp  mppi  mppiEstimation.cpp  mppiEstimation_2tag.cpp  mppiRocket.cpp  mppi_2tag_1tag.cpp  offlineMppiEstimation_2tag.cpp  temp.cpp
